--- a/python_tutorial_mlph.ipynb
+++ b/python_tutorial_mlph.ipynb
@@ -30,17 +30,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello World\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"Hello World\")"
    ]
@@ -83,20 +75,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "((1+5j), 1j)"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "True, False                      # bool\n",
     "10, 10_000, int('10')            # integers\n",
@@ -106,18 +87,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'int'>\n",
-      "<class 'float'>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "a = 10\n",
     "print(type(a))\n",
@@ -143,17 +115,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "b is  1.7\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "b = 10/6\n",
     "print(f'b is {b: .1f}')"
@@ -168,40 +132,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "([1, 2, 3], ['a', 'b', 1], [[1, 0], [0, 1, 1]])"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "[1, 2, 3], ['a', 'b', 1], [ [1, 0], [0, 1, 1] ]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['a', 2, 1, 3, 4]"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "a = ['a', 2, 1]\n",
     "a + [3, 4]\n",
@@ -218,40 +160,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "({'a': 1, 'b': [0, 0, 1]}, {'a': 1, 'b': [0, 0, 0]})"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "{'a': 1, 'b': [0, 0, 1]}, dict(a=1, b=[0, 0, 0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'a': 0, 'b': 2, 'c': 1}"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "a = {'a': 1, 'b': 2}\n",
     "a.update({'c': 1, 'a': 0})\n",
@@ -267,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,20 +216,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(4, 8, 12, 49, 2.5, 2, 1)"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "2 + 2, 9 - 1, 3*4, 7 ** 2, 5/2, 5//2, 5%2"
    ]
@@ -323,20 +232,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(False, False)"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "1 == 1, 2 > 1, 1 >= 1                       # all true\n",
     "1 == 1 and True, True or False, not False   # all true\n",
@@ -345,20 +243,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "1 < 1 and 1 < 3"
    ]
@@ -379,17 +266,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1 in ..\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "if 1 > 2:\n",
     "    print('1 > 2')\n",
@@ -406,17 +285,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1, 2, 3]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "a = [1, 2, 3]\n",
     "\n",
@@ -433,22 +304,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n",
-      "3\n",
-      "5\n",
-      "a 1\n",
-      "b 2\n",
-      "c 3\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for i in range(1, 6, 2):\n",
     "    print(i)\n",
@@ -464,28 +322,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n",
-      "1\n",
-      "2\n",
-      "4\n",
-      "3\n",
-      "9\n",
-      "\n",
-      "\n",
-      "1\n",
-      "2\n",
-      "3\n",
-      "9\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# indentation matters:\n",
     "for i in (1, 2, 3): \n",
@@ -507,18 +346,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0, 2, 4]\n",
-      "[3, 4]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print([a for a in range(5) if a % 2 == 0])\n",
     "\n",
@@ -539,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -553,27 +383,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "local\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "19"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "sum_two_numbers(1, 2, 3, 6, 7, a=2, b=3)"
    ]
@@ -587,20 +399,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "30"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "class Person:\n",
     "    def __init__(self, name: str = 'Bob', age: int = 18):\n",
@@ -704,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -739,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -938,9 +739,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.52686056, 0.76289213, 0.73613677, 0.62416794, 0.70033805,\n",
+       "       0.57240496, 0.57922235, 0.52653417, 0.6186059 , 0.64679325])"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "x = np.random.rand(10, 3) # shape (10, 3)\n",
     "x0 = np.random.rand(3) # shape (3, )\n",
@@ -963,9 +776,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.68772278 0.84923288 0.12956829 0.05490715 0.80948716 0.86052346\n",
+      " 0.21583288 0.88095884 0.56405965 0.46074438]\n",
+      "[ True  True False False  True  True False  True  True False]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([0.68772278, 0.84923288, 0.80948716, 0.86052346, 0.88095884,\n",
+       "       0.56405965])"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "x  = np.random.rand(10)\n",
     "print(x)\n",
@@ -976,9 +810,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 1, 0, 0, 1, 1, 0, 1, 1, 0])"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# np.where\n",
     "np.where(x > 0.5, 1, 0)"
@@ -1002,7 +847,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1011,9 +856,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 1.67119895  0.05889461 -0.37892882]\n"
+     ]
+    }
+   ],
    "source": [
     "eig, eigvectors = np.linalg.eig(matrix)\n",
     "print(eig)"
@@ -1021,27 +874,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[15.08542706, -3.43515587, -0.46728906],\n",
+       "       [-9.73197104,  1.51065741,  1.95506762],\n",
+       "       [ 5.7561786 ,  0.3950215 , -1.65724627]])"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "np.linalg.inv(matrix)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 1.00000000e+00,  1.52261762e-16, -3.38300647e-16],\n",
+       "       [-1.03926249e-16,  1.00000000e+00, -8.02266582e-17],\n",
+       "       [ 1.64734816e-17,  2.52963073e-16,  1.00000000e+00]])"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "np.matmul(np.linalg.inv(matrix), matrix)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "SVDResult(U=array([[-0.19790247, -0.0439971 , -0.97923382],\n",
+       "       [-0.73276668, -0.65689354,  0.17760595],\n",
+       "       [-0.65106652,  0.75269857,  0.09776125]]), S=array([1.67801859, 0.42788892, 0.05194377]), Vh=array([[-0.27526101, -0.76158105, -0.58670749],\n",
+       "       [ 0.53104817,  0.3882724 , -0.75314832],\n",
+       "       [-0.80138581,  0.5188823 , -0.29755997]]))"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "np.linalg.svd(matrix)"
    ]
@@ -1072,7 +966,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1081,7 +975,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
