--- a/sheet03/sheet03.ipynb
+++ b/sheet03/sheet03.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Sheet 3\n",
     "\n",
-    "## Sam Hewson (Group 5), Qiyu Li (Group 4)"
+    "## Sam Hewson (Group 4), Qiyu Li (Group 4)"
    ]
   },
   {
@@ -35,7 +35,9 @@
     "\n",
     "$$ \\text{Loss}_\\text{Ridge} = \\sum_{i=1}^{N} (y_i - \\beta_0 - \\beta_1 x_{1i} - \\beta_2 x_{2i})^2 + \\lambda (\\beta_0^2 + \\beta_1^2 +\\beta_2^2),$$\n",
     "\n",
-    "where $x_i  = (1, x_{1i}, x_{2i})$, $\\lambda$ is regularization strength. Higher $\\lambda$ makes $\\beta_0$ smaller in regression."
+    "where $x_i  = (1, x_{1i}, x_{2i})$, $\\lambda$ is regularization strength. Higher $\\lambda$ makes $\\beta_0$ smaller in regression.\n",
+    "\n",
+    "$\\lambda > 0$, $\\beta_0 = 0$ to minimise loss"
    ]
   },
   {
@@ -54,7 +56,7 @@
     "### (c)\n",
     "For (a), regularization penalty is $\\lambda (\\beta_0^2 + \\beta_1^2 +\\beta_2^2)$. The regularization contours are **spheres**.\n",
     "\n",
-    "For (b), regularization penalty is $\\lambda (\\beta_1^2 +\\beta_2^2)$. The regularization contours are **cylinder surfaces**, the height is along $\\beta_0$ axis. "
+    "For (b), regularization penalty is $\\lambda (\\beta_1^2 +\\beta_2^2)$. The regularization contours are **cylinder surfaces**, the symmetric axis is along $\\beta_0$ axis. "
    ]
   },
   {
