Sheet 6 comments from supo

--- a/sheet06/sheet06_sh.ipynb
+++ b/sheet06/sheet06_sh.ipynb
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +110,7 @@
     "        layers = []\n",
     "        for h_dim in hidden_channels[latent_index:]:\n",
     "            layers.append(nn.Linear(in_dim, h_dim))\n",
-    "            if h_dim != input_dim:  # No activation for the output layer\n",
+    "            if h_dim != input_dim:  # No activation for the output layer  !!! Super important here because ReLu will make the output positive !!! - no way for agreement\n",
     "                layers.append(nn.ReLU())\n",
     "            in_dim = h_dim\n",
     "        self.decoder = nn.Sequential(*layers)\n",
@@ -497,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -520,8 +520,8 @@
     "    ax[i].plot(ambient[:,0].detach().numpy(), ambient[:,1].detach().numpy())\n",
     "    ax[i].scatter(data[:,0], data[:,1], c=embedding[:,0].detach().numpy(), cmap='cool')\n",
     "    ax[i].set_title(model_names[i])\n",
-    "    ax[i].set_xlabel(\"Latent dimension 1\")\n",
-    "    ax[i].set_ylabel(\"Latent dimension 2\")\n",
+    "    ax[i].set_xlabel(\"x1\")\n",
+    "    ax[i].set_ylabel(\"x2\")\n",
     "    ax[i].set_xlim(-2, 2)\n",
     "    ax[i].set_ylim(-1, 1)\n",
     "    fig.colorbar(ax[i].scatter(data[:,0], data[:,1], c=embedding[:,0].detach().numpy(), cmap='cool'), ax=ax[i])\n",
@@ -548,6 +548,7 @@
     "    - Continuous smooth curves\n",
     "- Model 2:\n",
     "    - Continous smooth curves - better chance at catching nuance in the data\n",
+    "    - Longer line in the space - more nuance\n",
     "- Model 3:\n",
     "    - Simple curves - mostly straight trajectories"
    ]
@@ -603,7 +604,9 @@
    "metadata": {},
    "source": [
     "We see as predicted, model 1 pics up the general trend well, but model 2 is able to fit more precisely the nuance of the pattern.\n",
-    "The PCA picks up no nuance and gives a straight line."
+    "The PCA picks up no nuance and gives a straight line.\n",
+    "\n",
+    "### Check untrained"
    ]
   },
   {
@@ -615,7 +618,11 @@
     "n point in p dimensional space.\n",
     "For p > 1, we are always losing information by reducing the dimensionality down to 1, the larger p is the worse this gets, and the less able to reconstuct the data it would be.\n",
     "\n",
-    "There are possible setups where it could be possible, if for example a 2d dataset lies on a 1d subset of the space. Again as p increases, this becomes increasingly unlikely "
+    "There are possible setups where it could be possible, if for example a 2d dataset lies on a 1d subset of the space. Again as p increases, this becomes increasingly unlikely.\n",
+    "\n",
+    "For structured data, we expect some lower dimensional representation, meaning some lower dim bottleneck can be used without loss of information however we see that as the bottleneck dimension decreases, eventually it will become too low, and the error will start to get large. \n",
+    "- Starts to struggle below point where bottleneck dim = data lowest dim.\n",
+    "\n"
    ]
   },
   {
@@ -627,7 +634,18 @@
     "Now decoder fixed $\\rightarrow$ decoder weights cannot change\n",
     "Now encoder learns to map to the latent space preset by the decoder, rather than the whole system.\n",
     "\n",
-    "This means the encoder will probably learn an optimal mapping to the latent space for the given decoder, but this is not necessarily the optimal mapping to the output space.\n"
+    "This means the encoder will probably learn an optimal mapping to the latent space for the given decoder, but this is not necessarily the optimal mapping to the output space.\n",
+    "\n",
+    "#### Additional comments\n",
+    "- Decoder equivalent to trajectory through space - lines plotted earlier\n",
+    "- Training encoder, learns how to properly map points to the correct position on the trajectory.\n",
+    "- Should be possible to train encoder to do this.\n",
+    "\n",
+    "\n",
+    "- Argument about orthogonal projection onto the line.\n",
+    "    - Optimal encoding minimises distance from points to the trajectory\n",
+    "- Imagine projections onto lines through points plotted earlier\n",
+    "\n"
    ]
   },
   {
@@ -1302,7 +1320,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Clearly SGD is bettter"
+    "Clearly SGD is bettter\n",
+    "\n",
+    "May need to train longer to see GD go down the step - may take much longer\n",
+    "\n",
+    "To scale appropriately - should show in terms of Epochs -- \"Fairer comparison\" -- Not really on GPU parellelisation\n",
+    "\n",
+    "- GD equivalent to moving in correct direction\n",
+    "- SGD correct direction + noise\n",
+    "- SGD usually better for scenarios with local minima - prevents falling in so easily\n"
    ]
   },
   {
