--- a/sheet08/sheet08_sh.ipynb
+++ b/sheet08/sheet08_sh.ipynb
@@ -551,8 +551,8 @@
     "- Training accuracy continues to improve\n",
     "    - Expect this would continue up to ~ 100% as the model overfits\n",
     "- Validation accuracy is more variable\n",
-    "    - We see the best validation accuracy actually came from 24th epoch\n",
-    "    - Perhaps if running for longer validation would continue on upward trend, with variations, but will only get so good as model starts to overfit."
+    "    - We see the best validation accuracy actually came from 16th epoch\n",
+    "    - As model continues to improve to match training data, it will overfit, and no longer generalises well, decreasing the accuracy of the validation set."
    ]
   },
   {
