SH sheet 09 comments

--- a/sheet09/sheet09_sh.ipynb
+++ b/sheet09/sheet09_sh.ipynb
@@ -108,7 +108,7 @@
     "    access_token = f.read().strip()\n",
     "\n",
     "model = \"meta-llama/Llama-2-7b-chat-hf\"\n",
-    "tokenizer = AutoTokenizer.from_pretrained(model, token=access_token)\n",
+    "tokenizer = AutoTokenizer.from_pretrained(model, token=access_token) # Load the tokenizer - vocab mapped to token ids\n",
     "model = AutoModelForCausalLM.from_pretrained(model, token=access_token, torch_dtype = torch.float16).to(device)\n",
     "print(model)"
    ]
@@ -188,7 +188,7 @@
     "with torch.no_grad():\n",
     "    outputs = model(**model_inputs)\n",
     "\n",
-    "logits = outputs['logits'][0, -1, :] # Get the logits of the last token of the sequence\n",
+    "logits = outputs['logits'][0, -1, :] # Get the logits of the last token of the sequence; logits of shape (batch_size, sequence_length, vocab_size)\n",
     "print(\"\\nlogits shape:\", logits.shape)\n",
     "\n",
     "probabilities = torch.nn.functional.softmax(logits, dim=-1) # Compute the probabilities using softmax\n",
@@ -251,6 +251,7 @@
     "\n",
     "generated_answer = \"\"\n",
     "for _ in range(30): # Generate 30 tokens\n",
+    "    # Working Autoregressively:\n",
     "    with torch.no_grad():\n",
     "        outputs = model(**model_inputs) # Forward pass through the model\n",
     "        logits = outputs['logits'][0, -1, :] # Get the logits of the last token of the sequence\n",
@@ -270,7 +271,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Why is there no added text for some of the steps?"
+    "Why is there no added text for some of the steps?\n",
+    "\n",
+    "Comes from where tokens are special characters e.g.: . , !\n",
+    "There are also hidden ids which are masked by printing operation - this causes probabilities to change"
    ]
   },
   {
@@ -312,7 +316,10 @@
     "Compute CDF as integral of p\n",
     "\n",
     "$$CDF_X(x) = \\frac{1}{4}x^2\\text{, } CDF_Y(y) = -\\frac{1}{4}y^2 + y$$\n",
-    "$$ g(x) = 2(1 - \\sqrt{1 - \\frac{1}{4}x^2} )"
+    "$$ g(x) = 2(1 - \\sqrt{1 - \\frac{1}{4}x^2} )$$\n",
+    "\n",
+    "\n",
+    "Take - sign, because we know the range of y [0, 2] => 2 - something"
    ]
   },
   {
