--- a/sheet10/sheet10_sh.ipynb
+++ b/sheet10/sheet10_sh.ipynb
@@ -193,6 +193,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Note that here it appears some paths overlap, but in fact, this is just because this is a 2d representation of a 5d dataset."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 2 Flow matching for generative modeling"
    ]
   },
@@ -829,12 +836,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "We see straight lines passing from the sources directly to the randomly assigned sinks."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 3 Adversarial attacks and AI safety"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -880,12 +894,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
    "source": [
     "# We import the DataManager class as a helper function to load the activation vectors for us.\n",
-    "from data.lie_detection.utils import DataManager\n",
+    "from lie_detection_utils import DataManager\n",
     "from sklearn.metrics import accuracy_score\n",
     "\n",
     "path_to_datasets = \"data/lie_detection/datasets\"\n",
@@ -894,20 +908,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
-     "ename": "RuntimeError",
-     "evalue": "torch.cat(): expected a non-empty list of Tensors",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[54], line 7\u001b[0m\n\u001b[0;32m      4\u001b[0m dm \u001b[38;5;241m=\u001b[39m DataManager()\n\u001b[0;32m      5\u001b[0m \u001b[38;5;66;03m#dm.add_dataset(dataset_name, \"Llama3\", \"8B\", \"chat\", layer=12, split=0.8, center=False,\u001b[39;00m\n\u001b[0;32m      6\u001b[0m \u001b[38;5;66;03m#                device='cpu', path_to_datasets=path_to_datasets, path_to_acts=path_to_acts)\u001b[39;00m\n\u001b[1;32m----> 7\u001b[0m \u001b[43mdm\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43madd_dataset\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdataset_name\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mLlama3\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m8B\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mchat\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mlayer\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m12\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43msplit\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m0.8\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcenter\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mFalse\u001b[39;49;00m\u001b[43m,\u001b[49m\n\u001b[0;32m      8\u001b[0m \u001b[43m               \u001b[49m\u001b[43mdevice\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mcpu\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m      9\u001b[0m train_acts, train_labels \u001b[38;5;241m=\u001b[39m dm\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtrain\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m     10\u001b[0m test_acts, test_labels \u001b[38;5;241m=\u001b[39m dm\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mval\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
-      "File \u001b[1;32mc:\\Users\\samhe\\OneDrive\\Documents\\Heidelberg\\ML in phys\\mlphy\\ML_PHYS24\\sheet10\\data\\lie_detection\\utils.py:59\u001b[0m, in \u001b[0;36mDataManager.add_dataset\u001b[1;34m(self, dataset_name, model_family, model_size, model_type, layer, label, split, seed, center, scale, device)\u001b[0m\n\u001b[0;32m     52\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21madd_dataset\u001b[39m(\u001b[38;5;28mself\u001b[39m, dataset_name, model_family, model_size, model_type, layer,\n\u001b[0;32m     53\u001b[0m                  label\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mlabel\u001b[39m\u001b[38;5;124m'\u001b[39m, split\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m, seed\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m, center\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m, scale\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m, device\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcpu\u001b[39m\u001b[38;5;124m'\u001b[39m):\n\u001b[0;32m     54\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[0;32m     55\u001b[0m \u001b[38;5;124;03m    Add a dataset to the DataManager.\u001b[39;00m\n\u001b[0;32m     56\u001b[0m \u001b[38;5;124;03m    label : which column of the csv file to use as the labels.\u001b[39;00m\n\u001b[0;32m     57\u001b[0m \u001b[38;5;124;03m    If split is not None, gives the train/val split proportion. Uses seed for reproducibility.\u001b[39;00m\n\u001b[0;32m     58\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[1;32m---> 59\u001b[0m     acts \u001b[38;5;241m=\u001b[39m \u001b[43mcollect_acts\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdataset_name\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmodel_family\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmodel_size\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmodel_type\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m     60\u001b[0m \u001b[43m                         \u001b[49m\u001b[43mlayer\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcenter\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mcenter\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mscale\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mscale\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdevice\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mdevice\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     61\u001b[0m     df \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mread_csv(os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(ROOT, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdatasets\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mdataset_name\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m.csv\u001b[39m\u001b[38;5;124m'\u001b[39m))\n\u001b[0;32m     62\u001b[0m     labels \u001b[38;5;241m=\u001b[39m t\u001b[38;5;241m.\u001b[39mTensor(df[label]\u001b[38;5;241m.\u001b[39mvalues)\u001b[38;5;241m.\u001b[39mto(device)\n",
-      "File \u001b[1;32mc:\\Users\\samhe\\OneDrive\\Documents\\Heidelberg\\ML in phys\\mlphy\\ML_PHYS24\\sheet10\\data\\lie_detection\\utils.py:19\u001b[0m, in \u001b[0;36mcollect_acts\u001b[1;34m(dataset_name, model_family, model_size, model_type, layer, center, scale, device)\u001b[0m\n\u001b[0;32m     17\u001b[0m activation_files \u001b[38;5;241m=\u001b[39m glob(os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(directory, \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mlayer_\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mlayer\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m_*.pt\u001b[39m\u001b[38;5;124m'\u001b[39m))\n\u001b[0;32m     18\u001b[0m acts \u001b[38;5;241m=\u001b[39m [t\u001b[38;5;241m.\u001b[39mload(os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(directory, \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mlayer_\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mlayer\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m_\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mi\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m.pt\u001b[39m\u001b[38;5;124m'\u001b[39m), map_location\u001b[38;5;241m=\u001b[39mdevice) \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;241m0\u001b[39m, ACTS_BATCH_SIZE \u001b[38;5;241m*\u001b[39m \u001b[38;5;28mlen\u001b[39m(activation_files), ACTS_BATCH_SIZE)] \n\u001b[1;32m---> 19\u001b[0m acts \u001b[38;5;241m=\u001b[39m \u001b[43mt\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcat\u001b[49m\u001b[43m(\u001b[49m\u001b[43macts\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdim\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m)\u001b[49m\u001b[38;5;241m.\u001b[39mto(device)\n\u001b[0;32m     20\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m center:\n\u001b[0;32m     21\u001b[0m     acts \u001b[38;5;241m=\u001b[39m acts \u001b[38;5;241m-\u001b[39m t\u001b[38;5;241m.\u001b[39mmean(acts, dim\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0\u001b[39m)\n",
-      "\u001b[1;31mRuntimeError\u001b[0m: torch.cat(): expected a non-empty list of Tensors"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "train_acts.shape torch.Size([1196, 4096])\n",
+      "test_acts.shape torch.Size([300, 4096])\n",
+      "Accuracy of the trained probe: 1.00\n"
      ]
     }
    ],
@@ -916,10 +926,10 @@
     "dataset_name = \"cities\"\n",
     "\n",
     "dm = DataManager()\n",
-    "#dm.add_dataset(dataset_name, \"Llama3\", \"8B\", \"chat\", layer=12, split=0.8, center=False,\n",
-    "#                device='cpu', path_to_datasets=path_to_datasets, path_to_acts=path_to_acts)\n",
     "dm.add_dataset(dataset_name, \"Llama3\", \"8B\", \"chat\", layer=12, split=0.8, center=False,\n",
-    "               device='cpu')\n",
+    "               device='cpu', path_to_datasets=path_to_datasets, path_to_acts=path_to_acts)\n",
+    "#dm.add_dataset(dataset_name, \"Llama3\", \"8B\", \"chat\", layer=12, split=0.8, center=False,\n",
+    "#               device='cpu')\n",
     "train_acts, train_labels = dm.get('train')\n",
     "test_acts, test_labels = dm.get('val')\n",
     "\n",
@@ -928,40 +938,125 @@
     "\n",
     "# Train a logistic regression probe on the train_acts and train_labels\n",
     "\n",
-    "# Train the logistic regression probe\n",
     "probe = LRProbe.from_data(train_acts, train_labels, lr=0.001, weight_decay=0.1, epochs=1000, device='cpu')\n",
     "\n",
     "# Evaluate on the test set\n",
     "preds = probe.pred(test_acts)\n",
-    "accuracy = accuracy_score(test_labels, preds)\n",
+    "accuracy = accuracy_score(test_labels.detach().numpy(), preds.detach().numpy())\n",
     "print(f\"Accuracy of the trained probe: {accuracy:.2f}\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 117,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Optimized perturbation: tensor([-0.0896,  0.0896,  0.0896,  ...,  0.0896, -0.0896,  0.0896],\n",
+      "       grad_fn=<SubBackward0>)\n"
+     ]
+    }
+   ],
    "source": [
-    "# TODO: optimize a perturbation on a single sample which is a lie"
+    "# TODO: optimize a perturbation on a single sample which is a lie\n",
+    "\n",
+    "# Select a single sample with label 0 (lie)\n",
+    "lie_idx = (test_labels == 0).nonzero(as_tuple=True)[0][0]\n",
+    "x_lie = test_acts[lie_idx].clone().requires_grad_(True)\n",
+    "\n",
+    "# Define the target label (truth)\n",
+    "target_label = torch.tensor(1.0)\n",
+    "\n",
+    "# Optimizer for perturbation\n",
+    "optimizer = torch.optim.Adam([x_lie], lr=0.01)\n",
+    "\n",
+    "# Optimize perturbation\n",
+    "for _ in range(500):  # Number of optimization steps\n",
+    "    optimizer.zero_grad()\n",
+    "    prediction = probe(x_lie)\n",
+    "    loss = torch.nn.BCELoss()(prediction, target_label)\n",
+    "    loss.backward()\n",
+    "    optimizer.step()\n",
+    "\n",
+    "# Extract the optimized perturbation\n",
+    "perturbation = x_lie - test_acts[lie_idx]\n",
+    "print(\"Optimized perturbation:\", perturbation)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 119,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy after applying perturbation: 0.47\n"
+     ]
+    }
+   ],
    "source": [
-    "# TODO: check whether this perturbation works on other samples too"
+    "# TODO: check whether this perturbation works on other samples too\n",
+    "# Apply the perturbation to all lie samples\n",
+    "lie_indices = (test_labels == 0).nonzero(as_tuple=True)\n",
+    "perturbed_acts = test_acts.clone()\n",
+    "perturbed_acts[lie_indices] += perturbation\n",
+    "\n",
+    "# Evaluate the probe on the perturbed samples\n",
+    "perturbed_preds = probe.pred(perturbed_acts)\n",
+    "perturbed_accuracy = accuracy_score(test_labels.detach().numpy(), perturbed_preds.detach().numpy())\n",
+    "print(f\"Accuracy after applying perturbation: {perturbed_accuracy:.2f}\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 120,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Small perturbation: tensor([-0.0054,  0.0232,  0.0509,  ...,  0.0163, -0.0198,  0.0094],\n",
+      "       grad_fn=<SubBackward0>)\n"
+     ]
+    }
+   ],
    "source": [
-    "# TODO: add the constraint that the perturbation should be small"
+    "# TODO: add the constraint that the perturbation should be small\n",
+    "# Reset the perturbed sample\n",
+    "x_lie = test_acts[lie_idx].clone().requires_grad_(True)\n",
+    "\n",
+    "# Define the regularization weight\n",
+    "lambda_reg = 0.1\n",
+    "\n",
+    "# Optimizer for perturbation\n",
+    "optimizer = torch.optim.Adam([x_lie], lr=0.01)\n",
+    "\n",
+    "# Optimize perturbation with regularization\n",
+    "for _ in range(500):\n",
+    "    optimizer.zero_grad()\n",
+    "    prediction = probe(x_lie)\n",
+    "    bce_loss = torch.nn.BCELoss()(prediction, target_label)\n",
+    "    reg_loss = lambda_reg * torch.norm(x_lie - test_acts[lie_idx])**2\n",
+    "    total_loss = bce_loss + reg_loss\n",
+    "    total_loss.backward()\n",
+    "    optimizer.step()\n",
+    "\n",
+    "# Extract the new perturbation\n",
+    "small_perturbation = x_lie - test_acts[lie_idx]\n",
+    "print(\"Small perturbation:\", small_perturbation)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The linear representation hypothesis states that probes are linear classifiers over the activation space of the LLM. By keeping perturbations small, the activation vector remains within the local neighborhood of its original representation, i.e. the linear space of true and false is not largely spread out, and therefore it is not clear, or easy to hop between the states."
    ]
   }
  ],
